--- a/app/globals.css
+++ b/app/globals.css
@@ -24,9 +24,9 @@
     --input: 220 13% 91%;
     --ring: 262.1 83.3% 57.8%;
     --radius: 0.75rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
+    --chart-1: 346 77% 49%;
+    --chart-2: 262, 83%, 57%;
+    --chart-3: 142, 76%, 36%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
   }
@@ -53,7 +53,7 @@
     --ring: 263.4 70% 50.4%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
+    --chart-3: 20, 90%, 48%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
